# GFA

./: CMakeLists.txt  README.md
Color/: RGBColorBuffer.cpp  RGBColorBuffer.hpp
